<resources>
    <string name="app_name">Haina E-Commerce</string>
    <string name="api_token_currency">960e475d7c3340c8bb54f12fd3fe9fbb</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="hint_email">e-mail@mail.com</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="explore">Explore</string>
    <string name="posting">Forum</string>
    <string name="my_account">Profile</string>
    <string name="hint_search">News Today, Covid-19 News…</string>
    <string name="categories">Categories</string>
    <string name="recomendations">RECOMMENDATIONS</string>
    <string name="news_title">News</string>
    <string name="shipping_title">Shipping</string>
    <string name="topup_title">Top-up</string>
    <string name="job_vacancy">Job</string>
    <string name="restaurant_title">Restaurant</string>
    <string name="other_title">Other</string>
    <string name="rent_apartment">Apartment</string>
    <string name="title_scan_qr">Scan QR</string>
    <string name="credit_card_title">Credit Card</string>
    <string name="send_money">Send Money</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="today">Today</string>
    <string name="covid_19_indonesia">Covid-19 | Indonesia</string>
    <string name="total_cases">Total cases</string>
    <string name="recover">Recovered</string>
    <string name="see_cases_other_countries"><u>See cases in other province ></u></string>
    <string name="house_maid_title">House Maid</string>
    <string name="car_service_title">Service Car</string>
    <string name="visa_agent_title">Visa Agent</string>
    <string name="payment_title">Payment</string>
    <string name="wifi_title">Wifi</string>
    <string name="electricity_title">Electricity Bills</string>
    <string name="water_title">Water Bills</string>
    <string name="ticket_title">Ticket</string>
    <string name="flight_title">Flight</string>
    <string name="bus_title">Bus</string>
    <string name="train_title">Train</string>
    <string name="travel_title">Travel</string>
    <string name="rent_title">Rent</string>
    <string name="car_title">Car</string>
    <string name="house_title">House</string>
    <string name="information_title">Information</string>
    <string name="history">History</string>
    <string name="cart">Cart</string>
    <string name="transaction_in_progress">Transaction in progress</string>
    <string name="your_post">Your Post</string>
    <string name="choose_all">Choose All</string>
    <string name="delete">Delete</string>
    <string name="mark_as_sold"><u>Mark as Sold</u></string>
    <string name="total_price">Total Price</string>
    <string name="buy">Buy</string>
    <string name="please_login_account">To view this page, please login first</string>
    <string name="havent_transaction">You have not done any transactions</string>
    <string name="currency">| Currency</string>
    <string name="one">1</string>
    <string name="idr">IDR</string>
    <string name="cny">CNY</string>
    <string name="eur">EUR</string>
    <string name="fullname">Full Name</string>
    <string name="phone_title">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="usd">USD</string>
    <string name="news_full_title">News</string>
    <string name="die_title">Died</string>
    <string name="covid_19_info">| Covid-19 Info</string>
    <string name="search_province_here">Search Province Here</string>
    <string name="title_job">Job Title</string>
    <string name="location_company">Company Location</string>
    <string name="category_job">Job Category</string>
    <string name="description">Description</string>
    <string name="salary">Salary</string>
    <string name="strip">-</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="posting_job">Posting Job</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">please wait</string>
    <string name="job_application">Job Application</string>
    <string name="logout">Logout</string>
    <string name="view_or_edit_profile"><u>View or edit profile ></u></string>
    <string name="haina_help_support"><![CDATA[Haina Help & Support]]></string>
    <string name="help_center"><![CDATA[Help center and term & conditions]]></string>
    <string name="yes">Yes, I want</string>
    <string name="sub_title_logout">Are you sure want to logout?</string>
    <string name="dash_line">-</string>
    <string name="all_category">All Category</string>
    <string name="filter">Filter</string>
    <string name="colon">:</string>
    <string name="date_publish">Publish date</string>
    <string name="apply_job">Apply Job</string>
    <string name="location">Location</string>
    <string name="job_title">Job</string>
    <string name="detail_job">Job Details</string>
    <string name="start_salary">Start Salary :</string>
    <string name="location_filter">Location :</string>
    <string name="apply">Apply</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="register_your_data_company_here">Register your data company here</string>
    <string name="warning_data_company">You have not registered a company, please register your company first for posting job vacancy.</string>
    <string name="company_name">Company Name</string>
    <string name="register_my_company">Register My Company</string>
    <string name="data_company">Company Data</string>
    <string name="description_company">Company Description</string>
    <string name="company_address">Company address</string>
    <string name="photo_company">Company photo</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="add_company_address">Add company address</string>
    <string name="personal_data">Personal Data</string>
    <string name="address">Address</string>
    <string name="resume">Resume</string>
    <string name="birth_date">Birth date</string>
    <string name="male">Male</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="first_class">First Class</string>
    <string name="female">Female</string>
    <string name="portfolio">Portfolio</string>
    <string name="certificate">Certificate</string>
    <string name="gender">Gender</string>
    <string name="title_upload_document">Click here for upload your document (.pdf)</string>
    <string name="uploaded">Ready to upload :</string>
    <string name="upload_document">Upload Document</string>
    <string name="please_enter_your_date_of_birth">Please enter your date of birth</string>
    <string name="about">About</string>
    <string name="click_here_for_add_skill">Click here for add skill</string>
    <string name="your_skills">Your skills :</string>
    <string name="add_skills">Add Skills</string>
    <string name="review_profile"><u>Review Profile</u></string>
    <string name="submit">Submit</string>
    <string name="the_job_you_wish_to_apply_for">the job you wish to apply for :</string>
    <string name="save_changes">Save Changes</string>
    <string name="requires_skill">Required Skills</string>
    <string name="edit_detail_job">Edit Detail Job</string>
    <string name="applicant">Who has applied for this job :</string>
    <string name="name">Name</string>
    <string name="empty_skill_requires">No required skills are set, you can add it by tapping "Edit".</string>
    <string name="step_one_posting_job">Step One : Add Job Detail</string>
    <string name="step_two_posting_job">Step Two : Add Required Skills</string>
    <string name="choose_company_location">Choose your company location :</string>
    <string name="image_company">Company Image</string>
    <string name="next"><![CDATA[->]]></string>
    <string name="finish">Finish</string>
    <string name="decline">Decline</string>
    <string name="ask_decline">Are you sure want to decline this applicant ?</string>
    <string name="need_your_action">Need Your Action</string>
    <string name="short_list">Short List</string>
    <string name="pending">Pending</string>
    <string name="interview">Interview</string>
    <string name="accept">Accept</string>
    <string name="description_short_list">Action <b>Short List</b> : Enter applicants into your review queue</string>
    <string name="description_interview">Action <b>Interview</b> : Invite applicant for an interview</string>
    <string name="description_accept">Action <b>Accept</b> : You accepted the applicant</string>
    <string name="description_decline">Action <b>Decline</b> : You decline the applicant</string>
    <string name="application_status">Application Status :</string>
    <string name="stand_dash">|</string>
    <string name="applying_for">Applying For :</string>
    <string name="edit">Edit</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="title_info_change_password">After changing password, you must to login with the new password</string>
    <string name="title_info_old_password">Please enter your old password</string>
    <string name="message_fill_data">Please fill your personal data for better experience</string>
    <string name="title_attention">Attention!</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="title_welcome_google_account">Hi, let\'s fill in your personal data first</string>
    <string name="okay">Okay</string>
    <string name="input_phone_number">Input phone number :</string>
    <string name="next_title">Next</string>
    <string name="example_phone">Ex : 08381231240</string>
    <string name="please_input_phone_number">Please Input Phone Number</string>
    <string name="service_type">Service Type</string>
    <string name="number">Number</string>
    <string name="price">Price</string>
    <string name="payment">Payment</string>
    <string name="pay">Pay</string>
    <string name="type_required">Type*</string>
    <string name="building_area_required">Building area*</string>
    <string name="surface_area_required">Land area*</string>
    <string name="bed_room_s_required">Bed Room(s)*</string>
    <string name="bath_room_s_required">Bath Room(s)/Toilet*</string>
    <string name="floor">Floor/Level</string>
    <string name="facilities_required">Facilities*</string>
    <string name="shm">SHM</string>
    <string name="hgb">HGB</string>
    <string name="address_property">Property Address*</string>
    <string name="title_ads_required">Ad Title*</string>
    <string name="description_ads">Ad Description*</string>
    <string name="set_price_required">Set Price for Rent*</string>
    <string name="set_price_sell_required">Set Price for Sale*</string>
    <string name="for_sell">For Sale</string>
    <string name="for_rent">For Rent</string>
    <string name="type_posting_required">Type Posting*</string>
    <string name="in_meters">In square meters</string>
    <string name="warehouse">Warehouse</string>
    <string name="office">Office</string>
    <string name="shmsrs">SHMSRS</string>
    <string name="girik">Girik</string>
    <string name="city_required">City*</string>
    <string name="province_required">Province*</string>
    <string name="sort_by">Sort by</string>
    <string name="name_ascending">Ascending name</string>
    <string name="name_descending">Descending name</string>
    <string name="highest_starting_price">Highest starting price</string>
    <string name="lowest_starting_price">Lowest starting price</string>
</resources>