<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/explore" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/postingFragment"
        android:icon="@drawable/ic_add_posting"
        android:title="@string/posting" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/myAccountFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/my_account" />
</menu>