<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    tools:context=".view.companycatalog.dashboard.search.filters.CompanyCatalogSearchFilterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_item_selection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_item_selection"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                style="@style/TextAppearance.MdcTypographyStyles.Body2"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RadioGroup
                    android:id="@+id/rg_sort_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_price_asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lowest_starting_price"
                        style="@style/TextView.Poppins12spGrey"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:id="@+id/rb_price_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/highest_starting_price"
                        style="@style/TextView.Poppins12spGrey"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:id="@+id/rb_name_asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_ascending"
                        style="@style/TextView.Poppins12spGrey"
                        android:textColor="@color/black"/>

                    <RadioButton
                        android:id="@+id/rb_name_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_descending"
                        style="@style/TextView.Poppins12spGrey"
                        android:textColor="@color/black"/>

                </RadioGroup>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black_60" />

        <Button
            android:layout_margin="10dp"
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button.Primary"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:text="@string/apply_filter"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>